vlib/v/checker/tests/unsafe_pointer_arithmetic_should_be_checked.vv
fn test_ptr_assign() {
    mut v := 5
    mut p := &v
    p++
    p += 2
    _ := v
}

fn test_ptr_infix() {
    v := 4
    mut q := &v - 1
    q = q + 3
    _ := q
    _ := v
}
